--- a/Tiver.Cuckoo/Tiver.Cuckoo.csproj
+++ b/Tiver.Cuckoo/Tiver.Cuckoo.csproj
@@ -40,8 +40,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Tiver.Fowl.Waiting, Version=0.1.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Tiver.Fowl.Waiting.0.1.3\lib\net45\Tiver.Fowl.Waiting.dll</HintPath>
+    <Reference Include="Tiver.Fowl.Waiting, Version=0.1.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Tiver.Fowl.Waiting.0.1.4\lib\net45\Tiver.Fowl.Waiting.dll</HintPath>
     </Reference>
     <Reference Include="WebDriver, Version=3.5.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Selenium.WebDriver.3.5.2\lib\net40\WebDriver.dll</HintPath>
@@ -53,7 +53,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
